# OntologyLoader

./: .gitignore  README.md  pyproject.toml  setup.py
Neo4jFunctions/: __init__.py  neo4j_utils.py
cql/: gene_ontology.cql  journalarticle_remediation.cql  monarchKG_import.cql  monarchkg_constraints.cql
journal_article_loader/: BatchPubMedDataImporter.py  JournalArticleNeo4jFunctions.py  PubMedReferenceImporter.py  PubMedXMLFunctions.py  journal_artical_embedding_processor.py  pubmed_remediation.py
monarchKG/: gene_ontology_processor.py  monarchKG_app.py
ontology-loader/: app.py  obo_import.py  obo_loader.py  obo_parser.py  owl_import.py
ontology_loader/: obo_import.py  obo_loader.py  owl_import.py
ontology_model/: obo_model.py  ontology_registry.py
ontology_supplement/: hgnc_import.py  pubmed_registry.py
rag_components/: gemma_embedding_service.py  gte_embedding_service.py  hugging_face_gemma.py
tests/: test_journal_articla_embedding_processor.py  test_neo4j_utils.py
